# ehrdyn-icu

./: .gitignore  BASELINES.md  BENCHMARK_VERSION  CANONICAL_SERIALIZATION.md  CANONICAL_SURFACES.md  CHANGELOG.md  CITATION.cff  CLINICAL_REVIEW.md  EHR_COMPONENT_SCORER.md  ETHICS_AND_MISUSE.md  KDD212_PUBLIC_ENTRANT.md  KDD215_FULL_ENTRANT.md  KNOWN_LIMITATIONS.md  LICENSE  LICENSE_NOTES.md  MANIFEST.in  MANIFEST.sha256  MIGRATION_V2.md  MIMIC_ACCESS.md  OPE_CONTRACT.md  PUBLIC_RECONSTRUCTION.md  README.md  RECURSIVE_WORLD_MODEL_ENTRANT.md  RELEASE_ASSET_LICENSES.md  RELEASE_PROVENANCE.csv  SCHEMA_VALIDATION.md  entrant_protocol.md  environment-rocky-linux.yml  pyproject.toml  pyrightconfig.json
clinical_review/: core_review_status.csv  packet_index.csv  reviewer_response_template.md  unresolved_construct_validity.csv
component_entrant_example/: entrant.json  entrant.py
contracts/: claim_provenance.csv  gate_contracts.json  kdd187_expected_aggregate_inventory.csv  kdd187_five_task_contract_manifest.csv  kdd187_lineage_provenance.csv  kdd187_parity_contract.json  ope_provenance_registry.csv  paper_contract_manifest.csv  paper_task_manifest.csv  preprocessing_contract.json
credentialed/: LOCAL_EVALUATION.md  README.md  build_local_contract.py
decision/: CODE_MAP.md  README.md  REPRODUCIBILITY.md  __init__.py
dictionaries/: actions.csv  baseline_fidelity.csv  features.csv  metric_availability.csv  rewards.csv
entrant/: FAILURE_SEMANTICS.md  METHOD_CARDS.md
evidence/: README.md
expected/: canonical_v2_five_task_manifest.json  synthetic_aggregate_metrics.json
fixtures/: kdd212_public_smoke_hashes.json  synthetic_small.csv  transition_submission_small.json
invalid_entrant_fixtures/: README.md  crash.json  invalid.py  malformed.json  negative.json  nondeterministic.json  nonfinite.json  nonnormalized.json  slow.json  unsupported.json  wrong_dimension.json
policy_entrant_example/: entrant.json  entrant.py
public_bundle/: kdd211_source_manifest_receipt.csv  public_manuscript_aggregate_bundle_manifest.csv
recursive_world_model_entrant/: README.md  entrant.json  entrant.py
sbom/: kdd214.cdx.json  (+1 more)
(+861 files in other folders)
