[build-system]
requires = ["setuptools>=79,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "ehrdyn-icu"
version = "1.1.0"
description = "Clean-room utilities for the EHRDyn-ICU multi-cohort benchmark contract"
requires-python = ">=3.11,<3.14"
dependencies = ["jsonschema==4.26.0", "numpy==2.3.3"]

[project.optional-dependencies]
credentialed = ["pandas>=2.2"]

[project.scripts]
ehrdyn-icu = "kdd2027_benchmark.cli:main"
kdd2027 = "kdd2027_benchmark.cli:main"


[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"kdd2027_benchmark.current_five_task" = ["runtime_config.json"]

[tool.setuptools.packages.find]
where = ["src"]
